Fixed drag-resizing rectangle when body not overflowing

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -106,7 +106,6 @@
 
 .rst-body {
     position: relative;
-    overflow: hidden;
 
     tr, td {
         overflow: hidden;
